--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
 <app-loading class="pt-5" *ngIf="loading"></app-loading>
 
 <div *ngIf="error" class="alert alert-danger animated fadeIn">
-     <h3>Ha ocurrido un error</h3>
+     <h3>Error</h3>
      <p>{{mensajeError}}</p>
 </div>
 <app-tarjeta [items] = "nuevasCanciones"></app-tarjeta>
